# UVProTermBT

./: .gitignore  CHANGELOG.md  CLAUDE.md  LOG.txt  README.md  ROADMAP.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml  release.yml
docs/: GAIA_AUDIO_SSTV.md  PROTOCOL.md  UVPRO_N76_KISS_LINUX.md  WINLINK_PAT.md
docs/dev/: LOG.txt
packaging/: AppRun  build.sh  entry.py  postinst  prerm  uvprotermbt-wrapper.sh  uvprotermbt.1  uvprotermbt.desktop  uvprotermbt.spec
scripts/: distro.sh  install-desktop-entry.sh  monitor.py  preflight.sh
tests/: test_audio_frame.py  test_gaia.py  test_kiss.py  test_kiss_tcp.py  test_pat_panel.py  test_sbc.py  test_sstv.py  test_sstv_tab.py
uvprotermbt/: __init__.py  __main__.py  audio_capture.py  audio_frame.py  audio_link.py  audio_tx.py  ax25_conn.py  bt.py  gaia.py  gaia_probe.py  kiss.py  kiss_tcp.py  link.py  sbc.py  sstv.py
uvprotermbt/gui/: main_window.py  radio_picker.py  sstv_tab.py
